--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #f5f5dc;
+  color: #3e3c3c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,16 +18,14 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -65,4 +63,33 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.standard_page_container{
+  margin: 0 auto;
+  max-width: 1280px;
+}
+
+.smallLogo{
+  height: 50px;
+  width: 50px;
+}
+
+.hiddenLink{
+  color: inherit;
+  font-weight: normal;
+}
+
+.hiddenLink:hover{
+  color: inherit;
+}
+
+.leftImageRightText{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.leftImageRightText div{
+  margin: 3px;
 }
